# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.465.2.56 2008-01-13 22:01:25 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

2.2.5 (2008/??/??)
 - (2008/01/13) Added new vietnam translation, thanks to Nguyen Nguyet. Phuong!
 - (2008/01/13) Fixed bug# 2621 - Wrong order of items (Subject,Service,SLA,Body
    -> Service,SLA,Subject,Body) in Frontend AgentTicketPhone, AgentTicketEmail
    and CustomerTicketMessage.
 - (2008/01/12) Fixed bug# 1687 - Wrong "New message!" hint on queue with
    "Customer State Notify" activated.
 - (2008/01/09) Fixed bug# 2613 - Images are broken in Lite-Theme if OTRS do
    not use the default Alias /otrs-web/.
 - (2008/01/08) Improved Kernel::System::XML::XMLParse() to prevent bugs
    like# 2612.
 - (2008/01/08) Fixed bug# 2609 - Temp files are not removed after process was
    finished under windows.
 - (2008/01/07) Fixed bug# 1893 - Attachement Storage fails with
    ArticleStorageFS in win32 with ? in filenames.
 - (2008/01/03) Fixed bug# 2491 - OTRS crash's after initial login on fresh
    installation on fedora 7, fedora 8, altlinux and ActiveState Perl on win32.
 - (2008/01/02) Fixed bug# 2601 - Only agents with rw permissions are shown in
    inform agent selections of note screens, all agents with note permissions
    should be shown.
 - (2008/01/02) Fixed bug# 2600 - MS SQL: Fulltext search in ticket body with
    mssql backend not possible (workaround, improved API for 2.3.x).
 - (2008/01/01) Fixed bug# 1120 - TO recipients are dropped when replying to a
    ticket.
 - (2008/01/01) Fixed bug# 2589 - Ticket-title not shown in ticket list of
    change customer, phone- and email ticket.
 - (2007/12/27) Fixed bug# 1148 - Lost of attachments when spliting ticket.