@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.465.2.56 2008-01-13 22:01:25 martin Exp $
+# $Id: CHANGES,v 1.465.2.57 2008-01-14 12:15:07 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.2.5 (2008/??/??)
+ - (2008/01/14) Fixed bug# 977 - No agent notification for new ticket from
+    webinterface if CustomerGroupSupport is enabled.
  - (2008/01/13) Added new vietnam translation, thanks to Nguyen Nguyet. Phuong!
  - (2008/01/13) Fixed bug# 2621 - Wrong order of items (Subject,Service,SLA,Body
     -> Service,SLA,Subject,Body) in Frontend AgentTicketPhone, AgentTicketEmail
